# 4-en-linea

./: CMakeLists.txt  README.md
include/: App.hh  IJugador.hh  Ijugador.hh  JuegoFrame.hh  MainFrame.hh  MenuFrame.hh  TableroFrame.hh  jugadorHumano.hh  jugadorIAFacil.hh  jugadorIAInteligente.hh  tablero.hh
src/: App.cpp  CMakeLists.txt  Ijugador.cpp  JuegoFrame.cpp  MainFrame.cpp  Mainframe.cpp  MenuFrame.cpp  TableroFrame.cpp  ijugador.cpp  jugadorHumano.cpp  jugadorIAFacil.cpp  jugadorIAInteligente.cpp  main.cpp  main2.cpp  main3.cpp  tablero.cpp
tests/: CMakeLists.txt  test_jugadorHumano.cpp  test_jugadorIAFacil.cpp  test_jugadorIAInteligente.cpp  test_tablero.cpp
